# spotify-internal

./: .gitignore  LICENSE.txt  README.md  __init__.py  config.py  credentials.json  credentials.py  pyproject.toml  utils.py
spotify_internal/: __init__.py  endpoints.py  get_colors.py  internal.py  login.py  search.py  spotify_internal.py  utils.py
